test/libyul/yulSyntaxTests/opcode_for_function_args_2.yul
{
	function f() -> mload {}
}
// ----
// ParserError 5568: (19-24): Cannot use builtin function name "mload" as identifier name.
